# lbr-testsuite

./: .editorconfig  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.build  Dockerfile.tests  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  testrunner.py  tox.ini
ansible/: ci_machine.yaml  pytest.yaml  ready_sync.yaml  requirements.yaml
ci/: build.gitlab-ci.yaml  check.gitlab-ci.yaml  doc.gitlab-ci.yaml  prepare.gitlab-ci.yaml  pytest.gitlab-ci.yaml  upload.gitlab-ci.yaml
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/_templates/: package.rst_t
doc/source/css/: one_parameter_per_line.css
doc/source/plugins/: lbr_keyboard_interrupt.rst  lbr_renamer.rst  lbr_testsuite.rst  lbr_topology.rst  modules.rst
doc/source/sources/: common.rst  executable.rst  ipconfigurer.rst  modules.rst  spirent.rst  spirentlib.rst  topology.rst  trex_astf_profile_generator.rst  trex_instances.rst  trex_stl_stream_generator.rst
example/: runtests.py  testsconf.py
examples/: conftest.py
examples/data_table/: README.md  conftest.py  test_charts_complex.py  test_charts_simple.py
examples/data_table/example_results/: test_charts_complex.csv  (+1 more)
examples/topology/: README.md  conftest.py  test_topology.py
examples/trex/: README.md  test_trex_generator.py  test_trex_generator_topology.py
framework/: __init__.py  arguments.py  basetest.py  bootstrap.css  logger.py  resultgenerator.py  testcasedata.py  testresult.py  testrunner.py
framework/src/: arguments.py  resultgenerator.py  script.js  testresult.py
lbr_testsuite/: __init__.py
lbr_testsuite/_pytest_plugins/: plugin.py
lbr_testsuite/_trex_imports/: _deimport_scapy.py  _deimport_yaml.py  _preload_trex_scapy.py
lbr_testsuite/common/: __init__.py  common.py  conv.py  sysctl.py
lbr_testsuite/data_table/: __init__.py  benchmark_charts.py  charts.py  data_table.py  line_colors.py  throughput_table.py
lbr_testsuite/dpdk_application/: archive_stats.py  card_config.py  dpdk_port.py  hugepages.py  lcore_args.py  numa_config.py  pipeline_runtime.py  port_set.py  stats_interface.py
lbr_testsuite/executable/: README.md  __init__.py  coredump.py  executable.py  executor.py  local_executor.py  remote_executor.py  rsync.py  service.py  strace.py
lbr_testsuite/ipconfigurer/: __init__.py  ipconfigurer.py
lbr_testsuite/packet_crafter/: __init__.py  abstract_packet_crafter.py  ipaddresses.py  ports.py  random_types.py  scapy_packet_crafter.py  trex_packet_crafter.py
lbr_testsuite/profiling/: __init__.py  _charts.py  application.py  cache.py  cpumon.py  perf.py  pipeline.py  power_consumption.py  profiler.py  rx_tx.py  system.py
lbr_testsuite/pytest/: plugin.py
lbr_testsuite/spirent/: __init__.py  device.py  spirent.py  steps_measurement.py  stream_block.py
lbr_testsuite/throughput_runner/: __init__.py  spirent_throughput_runner.py
lbr_testsuite/topology/: __init__.py  analyzer.py  device.py  devices_args.py  generator.py  pci_address.py  registration.py  topology.py
lbr_testsuite/trex/: README.md  __init__.py  trex_base.py  trex_common.py  trex_configuration_file.py  trex_emulation.py  trex_generator.py  trex_manager.py  trex_stateful.py  trex_stateless.py
lbr_testsuite/trex_tools/: __init__.py  trex_astf_profile_generator.py  trex_instances.py  trex_stl_stream_generator.py
lbr_testsuite/vlan_config/: vlanconfig.py
modules/spirent/: setup.py  stctest.py
modules/trex/: trextest.py
pytest/: conftest.py
pytest_tests/: .coveragerc  conftest.py
spirent/: spirentlib.py
spirent/client/: StcPython.py
spirent/server/: spirent_ctrl.py
spirent/stcapi/: StcPythonTCP.py  StcPythonTcl.py
src/: basetest.py
(+106 files in other folders)
