[build-system]
requires = ["setuptools >= 61", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lbr_testsuite*"]

[project]
name = "lbr_testsuite"
description="Lbr_testsuite package contains various modules used by CESNET projects"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "CESNET", email = "tmc-info@cesnet.cz" }
]
maintainers = [
    { name = "Jan Sobol", email = "Jan.Sobol@cesnet.cz" },
    { name = "Pavel Krobot", email = "Pavel.Krobot@cesnet.cz" },
    { name = "Dominik Tran", email = "Dominik.Tran@cesnet.cz" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Framework :: Pytest",
]
dependencies = [
    "pyroute2>=0.6.2,<1",
    "lbr-trex-client == 3.4.0.dev311",
    "stcrestclient",
    "pytest>=7.0",
    "pytest-cases>=3.6.11",
    "pytest-instafail",
    "fabric>=3.0.0",
    "faker",
    "scapy",
    "matplotlib",
    "pandas",
]
dynamic = ["version"]

[project.urls]
repository = "https://gitlab.liberouter.org/tmc/testsuite/"

[project.entry-points."pytest11"]
lbr_testsuite = "lbr_testsuite._pytest_plugins.plugin"
lbr_keyboard_interrupt = "lbr_testsuite._pytest_plugins.keyboard_interrupt.plugin"
lbr_renamer = "lbr_testsuite._pytest_plugins.renamer.plugin"
lbr_topology = "lbr_testsuite._pytest_plugins.topology.plugin"
lbr_vlan_config = "lbr_testsuite._pytest_plugins.vlan_config.plugin"
lbr_machine_defaults = "lbr_testsuite._pytest_plugins.machine_defaults.plugin"
lbr_generators_spirent = "lbr_testsuite._pytest_plugins.generators.spirent.plugin"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}.dev{ccount}+git.{sha}"
dirty_template = "{tag}.dev{ccount}+git.{sha}.dirty"
starting_version = "1.0.0"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.black]
line-length = 100
